# Skater

./: .gitignore  CMakeLists.txt
cmake/: EmbedResources.cmake
include/: Skater.h
include/Skater/: Color.h  Game.h  Window.h
include/Skater/Audio/: AudioEngine.h  AudioStream.h  AudioStreamInstance.h
include/Skater/Components/: AudioStreamPlayer.h  GraphicsComponent.h  SpriteRenderer.h  TextRenderer.h  TextureRegion.h
include/Skater/Core/: Component.h  ComponentList.h  Entity.h  EntityList.h  Scene.h
include/Skater/Events/: Event.h  WindowEvent.h
include/Skater/Input/: Gamepad.h  Input.h  InputAction.h  InputBinding.h  InputEvent.h  JoystickAxis.h  JoystickButton.h  Key.h  Keyboard.h  KeyboardState.h  Keys.h  Mouse.h  MouseButton.h
include/Skater/Math/: MathUtil.h  Matrix4.h  Point.h  Rectangle.h  Vector2.h  Vector3.h  Vector4.h
include/Skater/Renderer/: Buffers.h  Framebuffer.h  RenderBatcher.h  RenderCommand.h  Renderer.h  RendererAPI.h  Shader.h  Texture.h  VertexArray.h
include/Skater/Resources/: ResourceDatabase.h
include/Skater/Text/: Font.h  FontSystem.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/soloud/: CMakeLists.txt
resources/shaders/: default_fragment.glsl  default_vertex.glsl
src/Skater/: Game.cpp  StbInit.cpp
src/Skater/Audio/: AudioEngine.cpp  AudioStream.cpp
src/Skater/Components/: AudioStreamPlayer.cpp  SpriteRenderer.cpp  TextRenderer.cpp  TextureRegion.cpp
src/Skater/Core/: Component.cpp  ComponentList.cpp  Entity.cpp  EntityList.cpp  Scene.cpp
src/Skater/Input/: Gamepad.cpp  Input.cpp  InputAction.cpp  InputBinding.cpp  Keyboard.cpp  KeyboardState.cpp  Mouse.cpp
src/Skater/Platform/Glfw/: GlBuffers.cpp  GlBuffers.h  GlFramebuffer.cpp  GlFramebuffer.h  GlKeyUtil.h  GlRendererAPI.cpp  GlRendererAPI.h  GlShader.cpp  GlShader.h  GlTexture.cpp  GlTexture.h  GlTextureUtil.h  GlVertexArray.cpp  GlVertexArray.h  GlWindow.cpp  GlWindow.h
src/Skater/Renderer/: Buffers.cpp  Framebuffer.cpp  RenderBatcher.cpp  Renderer.cpp  RendererAPI.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
src/Skater/Resources/: ResourceDatabase.cpp
src/Skater/Stb/: StbTrueType.cpp
src/Skater/Text/: Font.cpp  FontSystem.cpp
